maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:54: error: illegal start of simple expression
    if (booldessus) {marquerCasesAdjacentes([pos(0);pos(1)-1])}
                                            ^JediEscaper:54: error: ')' expected but ';' found.
    if (booldessus) {marquerCasesAdjacentes([pos(0);pos(1)-1])}
                                                   ^JediEscaper:54: error: ';' expected but ']' found.
    if (booldessus) {marquerCasesAdjacentes([pos(0);pos(1)-1])}
                                                            ^JediEscaper:55: error: illegal start of simple expression
    if (booldroite) {marquerCasesAdjacentes([pos(0)+1;pos(1)])}
                                            ^JediEscaper:55: error: ')' expected but ';' found.
    if (booldroite) {marquerCasesAdjacentes([pos(0)+1;pos(1)])}
                                                     ^JediEscaper:55: error: ';' expected but ']' found.
    if (booldroite) {marquerCasesAdjacentes([pos(0)+1;pos(1)])}
                                                            ^JediEscaper:56: error: illegal start of simple expression
    if (booldessous) {marquerCasesAdjacentes([pos(0);pos(1)+1])}
                                             ^JediEscaper:56: error: ')' expected but ';' found.
    if (booldessous) {marquerCasesAdjacentes([pos(0);pos(1)+1])}
                                                    ^JediEscaper:56: error: ';' expected but ']' found.
    if (booldessous) {marquerCasesAdjacentes([pos(0);pos(1)+1])}
                                                             ^JediEscaper:57: error: illegal start of simple expression
    if (boolgauche) {marquerCasesAdjacentes([pos(0)-1;pos(1)])}
                                            ^JediEscaper:57: error: ')' expected but ';' found.
    if (boolgauche) {marquerCasesAdjacentes([pos(0)-1;pos(1)])}
                                                     ^JediEscaper:57: error: ';' expected but ']' found.
    if (boolgauche) {marquerCasesAdjacentes([pos(0)-1;pos(1)])}
                                                            ^